FIX: remove font-size set by ListDropdown as it was way too small for a normal user and UI best practices
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@10364 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/global.css
+++ b/css/global.css
@@ -311,7 +311,7 @@ a:hover .fa,.fa:hover {text-decoration:none !important;} /* Never underline a Fo
 .SearchSpace a:link, .SearchSpace a:visited {text-decoration:none;}
 .SearchSpace a:hover, .SearchSpace a:active {text-decoration:underline;}
 
-.ListDropdown {width: 115px;font-size: 0.7em;margin:0px;padding: 0px;height:18px;}
+.ListDropdown {width: 115px;margin:0px;padding: 0px;height:18px;}
 
 /*Forms*/
 #CentralSpaceLogin form {margin:0;padding:0;}
